Make it work with dotnet 8 pre 7

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <MauiVersion>7.0.92</MauiVersion>
+    <!--<MauiVersion>7.0.92</MauiVersion>-->
   </PropertyGroup>
 
 </Project>
