--- a/src/DeviceRunners.UITesting.Maui/DeviceRunners.UITesting.Maui.csproj
+++ b/src/DeviceRunners.UITesting.Maui/DeviceRunners.UITesting.Maui.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net7.0</TargetFrameworks>
+    <TargetFrameworks>net8.0</TargetFrameworks>
     <UseMaui>true</UseMaui>
     <SingleProject>true</SingleProject>
     <IsPackable>true</IsPackable>
@@ -10,5 +10,10 @@
   <ItemGroup>
     <ProjectReference Include="..\DeviceRunners.UITesting\DeviceRunners.UITesting.csproj" />
   </ItemGroup>
-
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.0-preview.7.8842" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Update="Microsoft.Maui.Controls.Compatibility" Version="8.0.0-preview.7.8842" />
+  </ItemGroup>
 </Project>
