--- a/src/DeviceRunners.VisualRunners.Maui/DeviceRunners.VisualRunners.Maui.csproj
+++ b/src/DeviceRunners.VisualRunners.Maui/DeviceRunners.VisualRunners.Maui.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <UseMaui>true</UseMaui>
     <SingleProject>true</SingleProject>
     <IsPackable>true</IsPackable>
@@ -10,5 +10,10 @@
   <ItemGroup>
     <ProjectReference Include="..\DeviceRunners.VisualRunners\DeviceRunners.VisualRunners.csproj" />
   </ItemGroup>
-
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.0-preview.7.8842" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Update="Microsoft.Maui.Controls.Compatibility" Version="8.0.0-preview.7.8842" />
+  </ItemGroup>
 </Project>
